Completado el proyecto 1

--- a/proyecto1.html
+++ b/proyecto1.html
@@ -11,14 +11,21 @@
             color: black;
             font: normal 8mm serif
         }
+        
+        ul li {
+            background: yellow;
+            border: 1px solid rgb(48, 152, 170);
+            box-shadow: 3px 4px 7px;
+            margin: 6px;
+        }
     </style>
 </head>
 <body>
     <main>
         <div class="publicidad">
             <h1>Publicidad</h1>
-            <p>La predicción del gasto en publicidad digital es de 87 miles de millones de euros en 2013.</p>
-            <p>En Europa Occidental Internet se llevará aproximadamente la cuarta parte de esta cifra, pero con grandes varaiciones entre los distintos países.</p>
+            <p>La predicción del gasto en digital es de <strong> 87 miles de millones de euros en 2013</strong>.</p>
+            <p>En Europa <em>Occidental</em> Internet se llevará aproximadamente la cuarta parte de esta cifra, pero con grandes varaiciones entre los distintos países.</p>
         </div>
         <div class="internet-en-españa">
             <h1>Internet en España</h1>
