--- a/proyecto3.html
+++ b/proyecto3.html
@@ -33,7 +33,7 @@
 
         .fondo{
             width: 100%;
-            height: 21em;
+            height: 18.5em;
         }
 
         .foto-de-perfil{
@@ -57,7 +57,6 @@
         }
 
         .datos{
-
             padding: 2rem;
             width: 100%;
             height: 4.5rem;
@@ -67,7 +66,7 @@
             font-weight: normal;
         }
 
-        .datos div{
+        .datos span{
             width: 50%;
             display: flex;
             justify-content: center;
@@ -75,13 +74,11 @@
         }
 
         .influence {
-
-            margin: .5rem;
-            padding: .5rem;
+            margin-top: 1.5rem;
             background-color: rgb(12, 33, 51);
-            border-radius: 2rem;
+            border-radius: 5rem;
             height: 6.5rem;
-            width: 100%;
+            width: 90%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -136,7 +133,7 @@
             <p class="rol">Estudiante de Fullstack</p>
             <div class="datos">
                 <span id="pais">
-                    Venezuela
+                    Argentina
                 </span>
                 <span id="phone">
                     3517310200
@@ -144,15 +141,15 @@
             </div>
             <div class="influence">
                 <div>
-                    <p>150</p>
+                    <p>25</p>
                     <p>Followers</p>
                 </div>
                 <div>
-                    <p>383</p>
+                    <p>137</p>
                     <p>Following</p>
                 </div>
             </div>
-            <button>Follow</button>
+            <button onclick="window.location.href='https://twitter.com/duradri21';";">Follow</button>
         </div>
 </body>
 </html>
